# snail_os

./: .bootloader.asm.swp  .gdb_history  .gitignore  Cargo.toml  Makefile  README.md  bootloader  bootloader.asm  disk.img  io  io.asm  start_qemu.sh
.cargo/: config.toml
bootloader/: Makefile  bootloader.asm  gdbscript  kernel.asm  start_qemu.sh
snail_os/: Cargo.toml  run_qemu.sh
snail_os/src/: main.rs  vga_buffer.rs
src/: .main.rs.swp  main.rs
