[package]
name = "snail_os"
version = "0.1.0"
authors = ["levin <eric.l.biazo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort" #  disable stack unwinding on panic

[profile.release]
panic = "abort" #  disable stack unwinding on panic
