[package]
name = "snail_os"
version = "0.1.0"
authors = ["biazo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "x86_64-snail_os.json"

[dependencies]
bootloader = "0.9.11"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[unstable]
build-std = ["core", "compiler_builtins"]

[target.'cfg(target_os = "x86_64-snail_os.json")']
runner = "ls"
